# OSLab5

./: CMakeLists.txt  README.md  build.cmd  build.sh
include/: database_manager.h  device_simulation.h  htpp_server.h  logger.h  port_reader.h  temperature_calculator.h  temperature_server.h  web_client:index.html
src/: device_simulation.cpp  device_simulation_main.cpp  http_server.cpp  logger.cpp  main.cpp  port_reader.cpp  temperature_calculator.cpp  temperature_server.cpp  web_client:webserver.cpp
tests/: test_runner.cpp
